--- a/accounts/css/signin-main.css
+++ b/accounts/css/signin-main.css
@@ -45,6 +45,12 @@ body {
     color: #ffb400;
 }
 
+#service {
+    font-weight: 700;
+}
+
+#
+
 .exterior {
     display: table;
     position: absolute;
