Removed stray hashtag

--- a/accounts/css/signin-main.css
+++ b/accounts/css/signin-main.css
@@ -49,8 +49,6 @@ body {
     font-weight: 700;
 }
 
-#
-
 .exterior {
     display: table;
     position: absolute;
@@ -58,10 +56,10 @@ body {
     width: 100%;
 }
 
-/*.middle {
+.middle {
     display: table-cell;
     vertical-align: middle;
-}*/
+}
 
 #application {
     margin: 0 auto;
